--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,14 @@ nav:
   - Home: index.md
   - About: about.md
   - Course Description: course-description.md
+  - Learning Graph:
+    - Intro: learning-graph/index.md
+    - Course Concepts: learning-graph/course-concepts-v1.md
+    - Concept Taxonomy: learning-graph/concept-taxonomy.md
+    - Taxonomy Distribution: learning-graph/taxonomy-distribution.md
+    - Quality Assessment: learning-graph/quality-assessment.md
+    - Quality Metrics: learning-graph/quality-metrics.md
+    - Summary: learning-graph/LEARNING-GRAPH-SUMMARY.md
   - Tutorials:
       - Tutorial 1: tutorials/tutorial1.md
   - Cornel Labs FFT on the Pico: cornell-labs/pico-example.md
