--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,6 +26,7 @@ nav:
   - MicroSims:
     - MicroSims Overview: sims/index.md
     - Learning Graph: sims/learning-graph/index
+    - FFT History Timeline: sims/timeline/index.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
   - References: references.md
